--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,9 +127,14 @@ strip = true        # Strip debug symbols
 
 [profile.dev]
 opt-level = 0
-debug = true
+debug = 1
 split-debuginfo = "unpacked"
 incremental = true
+codegen-units = 256
+
+[profile.dev.package."*"]
+opt-level = 2
+debug = false
 
 
 [profile.dev.build-override]
