--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include Cargo.toml        # Rust project configuration
 include build.rs          # Build script for protobuf generation
 recursive-include src *.rs  # Rust source files
 recursive-include src/proto *.proto  # Protobuf definitions
+recursive-include py_src *.py  # Python source files
