--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ subtle = "2.6"
 rustpython-parser = "0.4.0"
 num-traits = "0.2"
 openai-harmony = { git = "https://github.com/openai/harmony", tag = "v0.0.4" }
+openmetrics-parser = "0.4.4"
 
 # gRPC and Protobuf dependencies
 tonic = { version = "0.14.2", features = ["gzip", "transport"] }
