--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "requests>=2.25.0",
+    "pytest>=7.0.0",
 ]
 
 [project.scripts]
@@ -48,7 +49,16 @@ sglang-router = "sglang_router.cli:main"
 
 
 [tool.maturin]
-python-source = "."
+python-source = "src"
 module-name = "sglang_router.sglang_router_rs"
 # Exclude bindings/python/README.md to use root README only
 exclude = ["README.md"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+markers = [
+    "unit: mark test as a unit test (no GPU required)",
+]
