--- a/bindings/golang/Cargo.toml
+++ b/bindings/golang/Cargo.toml
@@ -17,6 +17,7 @@ uuid = { version = "1.10", features = ["v4", "serde"] }
 once_cell = "1.21.3"
 futures-util = "0.3"
 tracing = "0.1"
+libc = "0.2.179"
 
 [dependencies.sgl-model-gateway]
 path = "../.."
