--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install rust dependencies
         run: |
-          bash scripts/ci/ci_install_rust.sh
+          bash scripts/ci_install_rust.sh
 
       - name: Configure sccache
         uses: mozilla-actions/sccache-action@v0.0.9
