Extract protocols as openai-protocol workspace crate
Move protocol definitions from src/protocols to a standalone workspace
crate named openai-protocol. This enables:

- Independent versioning and publishing to crates.io
- Reuse by other projects needing OpenAI-compatible types
- Cleaner dependency graph for the main crate

Changes:
- Create protocols/ workspace member with its own Cargo.toml
- Move all protocol types (chat, completion, embedding, etc.)
- Add axum as optional feature for ValidatedJson extractor
- Move IntoResponse impls for FlushCacheResult/WorkerLoadsResult
- Move JobStatus constructor methods to protocols crate
- Re-export as `pub use openai_protocol as protocols` for compatibility
- Exclude bindings/python from workspace to fix maturin builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
+[workspace]
+members = ["protocols"]
+exclude = ["bindings/python"]
+resolver = "2"
+
 [package]
 name = "sgl-model-gateway"
 version = "0.3.2"
@@ -109,6 +114,9 @@ base64 = "0.22"
 openai-harmony = { git = "https://github.com/openai/harmony", tag = "v0.0.4" }
 openmetrics-parser = "0.4.4"
 arc-swap = "1.7.1"
+
+# Workspace crates
+openai-protocol = { path = "protocols", features = ["axum"] }
 
 # gRPC and Protobuf dependencies
 tonic = { version = "0.14.2", features = ["gzip", "transport"] }
