--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [workspace]
-members = ["protocols", "reasoning-parser"]
+members = ["protocols", "reasoning-parser", "tool-parser"]
 exclude = ["bindings/python"]
 resolver = "2"
+
+[workspace.dependencies]
+openai-protocol = { path = "protocols" }
 
 [package]
 name = "sgl-model-gateway"
@@ -118,6 +121,7 @@ arc-swap = "1.7.1"
 # Workspace crates
 openai-protocol = { path = "protocols", features = ["axum"] }
 reasoning-parser = { path = "reasoning-parser" }
+tool-parser = { path = "tool-parser" }
 
 # gRPC and Protobuf dependencies
 tonic = { version = "0.14.2", features = ["gzip", "transport"] }
