refactor: Extract tokenizer into standalone llm-tokenizer workspace crate
Extract the tokenizer module from the main smg crate into a standalone
workspace crate for better modularity, independent versioning, and reusability.

## Changes

### New Crate Structure (tokenizer/)
- Created tokenizer/Cargo.toml with package metadata:
  - name: tokenizer (package name)
  - lib name: llm_tokenizer (crate name, since "tokenizer" is taken)
  - description: LLM tokenizer library with caching and chat template support
  - keywords: tokenizer, llm, huggingface, tiktoken, chat-template
  - categories: text-processing, parsing

- Moved source files from src/tokenizer/ to tokenizer/src/:
  - lib.rs (renamed from mod.rs)
  - traits.rs - Core traits (Encoder, Decoder, Tokenizer, Encoding)
  - huggingface.rs - HuggingFace tokenizers integration
  - tiktoken.rs - OpenAI tiktoken support
  - chat_template.rs - Jinja2 chat template processing
  - factory.rs - Tokenizer creation utilities
  - registry.rs - Thread-safe tokenizer registry
  - sequence.rs - Token sequence utilities
  - stop.rs - Stop sequence detection
  - stream.rs - Streaming decode support
  - mock.rs - Mock tokenizer for testing
  - hub.rs - HuggingFace Hub download support
  - cache/ - Multi-level tokenizer caching:
    - mod.rs, fingerprint.rs, l0.rs, l1.rs

### Integration Tests
- Moved tests/tokenizer/ to tokenizer/tests/:
  - chat_template_format_detection.rs
  - chat_template_integration.rs
  - chat_template_loading.rs
  - tokenizer_cache_correctness_test.rs
  - tokenizer_integration.rs
  - Created tests/common/mod.rs with test utilities

### Dependencies
- anyhow, blake3, bytemuck, dashmap, hf-hub
- lru, minijinja (with pycompat), parking_lot, rayon
- serde, serde_json, thiserror, tiktoken-rs, tokenizers
- tokio, tracing, uuid
- Dev: openai-protocol.workspace = true, reqwest, tempfile

### Re-exports from lib.rs
- CacheConfig, CachedTokenizer, CacheStats, L0Cache, L1Cache
- TokenizerFingerprint, TokenizerType, Hugg

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["protocols", "reasoning-parser", "tool-parser", "workflow"]
+members = ["protocols", "reasoning-parser", "tool-parser", "workflow", "tokenizer"]
 exclude = ["bindings/python"]
 resolver = "2"
 
@@ -123,6 +123,7 @@ openai-protocol = { path = "protocols", features = ["axum"] }
 reasoning-parser = { path = "reasoning-parser" }
 tool-parser = { path = "tool-parser" }
 wfaas = { path = "workflow", package = "workflow" }
+llm-tokenizer = { path = "tokenizer", package = "tokenizer" }
 
 # gRPC and Protobuf dependencies
 tonic = { version = "0.14.2", features = ["gzip", "transport"] }
