--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,28 @@ resolver = "2"
 openai-protocol = { path = "protocols" }
 smg-auth = { path = "auth", package = "auth" }
 
+# Shared dependencies
+anyhow = "1.0"
+async-trait = "0.1"
+axum = { version = "0.8.6" }
+blake3 = "1.5"
+bytemuck = { version = "1.21" }
+chrono = { version = "0.4" }
+dashmap = "6.1.0"
+http = "1.1.0"
+lru = "0.16.2"
+num-traits = "0.2"
+parking_lot = "0.12.4"
+rand = "0.9.2"
+reqwest = { version = "0.12.8", default-features = false }
+serde = { version = "1.0" }
+serde_json = "1.0"
+subtle = "2.6"
+thiserror = "2.0.12"
+tokio = { version = "1.42.0" }
+tracing = "0.1"
+uuid = { version = "1.10" }
+
 [package]
 name = "sgl-model-gateway"
 version = "0.3.2"
@@ -80,23 +102,16 @@ metrics-exporter-prometheus = "0.17.0"
 uuid = { version = "1.10", features = ["v4", "serde"] }
 ulid = "1.2.1"
 parking_lot = "0.12.4"
-rayon = "1.10"
 thiserror = "2.0.12"
 regex = "1.10"
 memchr = "2.7"  # SIMD-optimized byte pattern searching
 url = "2.5.4"
-validator = { version = "0.20.0", features = ["derive"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 anyhow = "1.0"
-tokenizers = { version = "0.22.0" }
-tiktoken-rs = { version = "0.7.0" }
-minijinja = { version = "2.0", features = ["unstable_machinery", "json", "builtins"] }
-minijinja-contrib = { version = "2.0", features = ["pycompat"] }
 rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
 tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
 rustls-pemfile = "2.2"
 openssl = "0.10.73"
-hf-hub = { version = "0.4.3", features = ["tokio"] }
 rmcp = { version = "0.8.3", features = ["client", "server",
     "transport-child-process",
     "transport-sse-client-reqwest",
@@ -108,8 +123,6 @@ rmcp = { version = "0.8.3", features = ["client", "server",
 serde_yaml = "0.9"
 oracle = { version = "0.6.3", features = ["chrono"] }
 subtle = "2.6"
-jsonwebtoken = { version = "9.3", default-features = false, features = ["use_pem"] }
-rustpython-parser = "0.4.0"
 num-traits = "0.2"
 num-bigint = "0.4"
 image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
