--- a/reasoning-parser/Cargo.toml
+++ b/reasoning-parser/Cargo.toml
@@ -9,8 +9,8 @@ keywords = ["llm", "reasoning", "parser", "chain-of-thought"]
 categories = ["parsing", "text-processing"]
 
 [dependencies]
-thiserror = "2.0.12"
-tokio = { version = "1.42.0", features = ["sync"] }
+thiserror.workspace = true
+tokio = { workspace = true, features = ["sync"] }
 
 [dev-dependencies]
-tokio = { version = "1.42.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["full", "test-util", "macros", "rt-multi-thread"] }
