--- a/tokenizer/Cargo.toml
+++ b/tokenizer/Cargo.toml
@@ -12,26 +12,27 @@ categories = ["text-processing", "parsing"]
 name = "llm_tokenizer"
 
 [dependencies]
-anyhow = "1.0"
-blake3 = "1.5"
-bytemuck = { version = "1.21", features = ["derive"] }
-dashmap = "6.1.0"
+anyhow.workspace = true
+blake3.workspace = true
+bytemuck = { workspace = true, features = ["derive"] }
+dashmap.workspace = true
+lru.workspace = true
+parking_lot.workspace = true
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
+thiserror.workspace = true
+tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
+tracing.workspace = true
+uuid = { workspace = true, features = ["v4", "serde"] }
+# Only used by tokenizer
 hf-hub = { version = "0.4.3", features = ["tokio"] }
-lru = "0.16.2"
 minijinja = { version = "2.0", features = ["unstable_machinery", "json", "builtins"] }
 minijinja-contrib = { version = "2.0", features = ["pycompat"] }
-parking_lot = "0.12.4"
 rayon = "1.10"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "2.0.12"
 tiktoken-rs = "0.7.0"
 tokenizers = "0.22.0"
-tokio = { version = "1.42.0", features = ["sync", "rt-multi-thread", "macros"] }
-tracing = "0.1"
-uuid = { version = "1.10", features = ["v4", "serde"] }
 
 [dev-dependencies]
 openai-protocol.workspace = true
-reqwest = { version = "0.12.8", features = ["blocking"] }
+reqwest = { workspace = true, features = ["blocking"] }
 tempfile = "3.8"
