Fix golang bindings build and multimodal crate
- Add bindings/golang to workspace exclude list
- Make grpc utils module and ProcessedMessages struct public
- Export process_chat_messages, generate_tool_constraints, create_stop_decoder
- Add anyhow to multimodal dev-dependencies for tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["protocols", "reasoning_parser", "tool_parser", "workflow", "tokenizer", "auth", "mcp", "kv_index", "data_connector", "multimodal"]
-exclude = ["bindings/python"]
+exclude = ["bindings/python", "bindings/golang"]
 resolver = "2"
 
 [workspace.dependencies]
