refactor: Extract wasm module into standalone smg-wasm workspace crate
Extracted the core WASM runtime and module management functionality from
src/wasm/ into a new standalone workspace crate at wasm/.

New smg-wasm crate (wasm/):
- Package name: smg-wasm
- Contains: config, errors, module, module_manager, runtime, spec, types
- Includes interface/spec.wit for wasmtime component bindings
- All pub(crate) methods changed to pub for cross-crate access
- 19 unit tests included and passing

Main crate changes (src/wasm/):
- mod.rs: Re-exports everything from smg_wasm via `pub use smg_wasm::*`
- route.rs: HTTP API routes remain here (depend on AppContext, AppState,
  Job, JobQueue which are app-specific types)

Cargo.toml updates:
- Added wasm to workspace members
- Added smg-wasm to workspace.dependencies
- Added smg-wasm as dependency for main crate

This separation allows smg-wasm to be used independently while the HTTP
routes remain in the main crate due to their app-specific dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["protocols", "reasoning_parser", "tool_parser", "workflow", "tokenizer", "auth", "mcp", "kv_index", "data_connector", "multimodal"]
+members = ["protocols", "reasoning_parser", "tool_parser", "workflow", "tokenizer", "auth", "mcp", "kv_index", "data_connector", "multimodal", "wasm"]
 exclude = ["bindings/python", "bindings/golang"]
 resolver = "2"
 
@@ -8,6 +8,7 @@ openai-protocol = { path = "protocols" }
 smg-auth = { path = "auth", package = "auth" }
 smg-mcp = { path = "mcp", package = "mcp" }
 smg-data-connector = { path = "data_connector", package = "data-connector" }
+smg-wasm = { path = "wasm", package = "smg-wasm" }
 
 # Shared dependencies
 anyhow = "1.0"
@@ -138,6 +139,7 @@ smg-mcp = { path = "mcp", package = "mcp" }
 kv-index = { path = "kv_index", package = "kv-index" }
 smg-data-connector = { path = "data_connector", package = "data-connector" }
 llm-multimodal = { path = "multimodal" }
+smg-wasm = { path = "wasm", package = "smg-wasm" }
 
 # gRPC and Protobuf dependencies
 tonic = { version = "0.14.2", features = ["gzip", "transport"] }
