[docs] add mintify and fix build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,8 @@ theme:
 plugins:
   - search:
       separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'
+  - minify:
+      minify_html: true
 
 extra:
   status:
