--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs-material mkdocstrings[python] pymdown-extensions
+          pip install mkdocs-material mkdocstrings[python] pymdown-extensions mkdocs-minify-plugin
 
       - name: Build documentation
         run: mkdocs build --strict
