Update labeler to match the latest file tree

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,7 +3,7 @@
 
 rust:
   - changed-files:
-      - any-glob-to-any-file: 'model_gateway/src/**/*.rs'
+      - any-glob-to-any-file: '**/*.rs'
 
 python-bindings:
   - changed-files:
@@ -14,6 +14,7 @@ documentation:
       - any-glob-to-any-file:
           - '**/*.md'
           - 'docs/**/*'
+          - 'mkdocs.yml'
 
 dependencies:
   - changed-files:
@@ -26,10 +27,15 @@ ci:
   - changed-files:
       - any-glob-to-any-file: '.github/**/*'
 
-grpc:
+docker:
   - changed-files:
       - any-glob-to-any-file:
-          - 'grpc_client/**/*'
+          - 'docker/**/*'
+          - '**/Dockerfile'
+
+grpc:
+  - changed-files:
+      - any-glob-to-any-file: 'grpc_client/**/*'
 
 mcp:
   - changed-files:
@@ -43,11 +49,39 @@ tool-parser:
   - changed-files:
       - any-glob-to-any-file: 'tool_parser/**/*'
 
+reasoning-parser:
+  - changed-files:
+      - any-glob-to-any-file: 'reasoning_parser/**/*'
+
 wasm:
   - changed-files:
       - any-glob-to-any-file:
           - 'wasm/**/*'
           - 'model_gateway/src/wasm/**/*'
+
+auth:
+  - changed-files:
+      - any-glob-to-any-file: 'auth/**/*'
+
+data-connector:
+  - changed-files:
+      - any-glob-to-any-file: 'data_connector/**/*'
+
+multimodal:
+  - changed-files:
+      - any-glob-to-any-file: 'multimodal/**/*'
+
+protocols:
+  - changed-files:
+      - any-glob-to-any-file: 'protocols/**/*'
+
+workflow:
+  - changed-files:
+      - any-glob-to-any-file: 'workflow/**/*'
+
+model-gateway:
+  - changed-files:
+      - any-glob-to-any-file: 'model_gateway/**/*'
 
 benchmarks:
   - changed-files:
@@ -58,3 +92,4 @@ tests:
       - any-glob-to-any-file:
           - 'model_gateway/tests/**/*'
           - 'e2e_test/**/*'
+          - '**/tests/**/*'
