--- a/.github/actions/publish-crate/action.yml
+++ b/.github/actions/publish-crate/action.yml
@@ -57,5 +57,11 @@ runs:
         CARGO_REGISTRY_TOKEN: ${{ inputs.token }}
       run: |
         cd ${{ inputs.path }}
-        cargo publish
-        echo "Published ${{ inputs.crate }}@${{ steps.check.outputs.local }}"
+        if cargo publish 2>&1 | tee /tmp/publish.log; then
+          echo "Published ${{ inputs.crate }}@${{ steps.check.outputs.local }}"
+        elif grep -q "already exists" /tmp/publish.log; then
+          echo "Version already exists on crates.io, skipping"
+        else
+          cat /tmp/publish.log
+          exit 1
+        fi
