--- a/.github/workflows/benchmark-request-processing.yml
+++ b/.github/workflows/benchmark-request-processing.yml
@@ -8,13 +8,9 @@ on:
       - 'model_gateway/src/routers/**'
       - 'model_gateway/src/core/**'
       - 'model_gateway/src/middleware.rs'
-  pull_request:
+  pull_request_target:
     branches: [ main ]
-    paths:
-      - 'model_gateway/benches/request_processing.rs'
-      - 'model_gateway/src/routers/**'
-      - 'model_gateway/src/core/**'
-      - 'model_gateway/src/middleware.rs'
+    types: [opened, synchronize, reopened, labeled]
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'
@@ -48,12 +44,13 @@ jobs:
     if: |
       github.repository == 'lightseekorg/smg' &&
       needs.check-ci.outputs.should_run == 'true' &&
-      (github.event_name != 'pull_request' ||
+      (github.event_name != 'pull_request_target' ||
        contains(github.event.pull_request.labels.*.name, 'router-benchmark'))
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 100
 
       - name: Setup Rust
