ci: add missing permissions to workflows
Add explicit permissions block to workflows that were missing them:
- pr-test-rust.yml: contents: read
- release-pypi.yml: contents: read

This follows the principle of least privilege for GITHUB_TOKEN.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -10,6 +10,9 @@ on:
     types: [opened, synchronize, reopened, labeled]
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 concurrency:
   group: gateway-tests-${{ github.ref }}
   cancel-in-progress: true
