--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ tokio = { version = "1.42.0" }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
 uuid = { version = "1.10" }
+wasmtime = { version = "41.0", features = ["component-model", "async"] }
+wasmtime-wasi = "41.0"
 
 [profile.release]
 opt-level = "z"     # Optimize for size
