--- a/mcp/Cargo.toml
+++ b/mcp/Cargo.toml
@@ -40,6 +40,9 @@ rmcp = { version = "0.8.3", features = ["client", "server",
     "transport-streamable-http-server-session",
     "reqwest",
     "auth"] }
+chrono = { workspace = true, features = ["serde"] }
+regex = "1.12.2"
+uuid = { workspace = true, features = ["v4"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
